--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,6 +1,8 @@
 @import './variables.scss';
 @import './screens.scss';
 @import './classes.scss';
+@import './inputs.scss';
+@import './switch.scss';
 
 body {
   margin: 0;
