--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,4 +1,5 @@
 @import './variables.scss';
+@import './transitions.scss';
 @import './screens.scss';
 @import './classes.scss';
 @import './inputs.scss';
