--- a/src/assets/switch.scss
+++ b/src/assets/switch.scss
@@ -1,4 +1,5 @@
-.named-switch {
+.named-switch,
+.named-btn {
     &>* {
         display: inline-block;
         vertical-align: middle;
@@ -6,7 +7,7 @@
 
     &>span {
         font-size: $f-l;
-        padding-right: $el-pad;
+        padding-left: $el-pad;
     }
 }
 
