--- a/src/assets/classes.scss
+++ b/src/assets/classes.scss
@@ -5,9 +5,7 @@
 
 .box {
     background-color: $c-p-dark;
-    outline: $bd-dash;
-    outline-offset: -5px;
-    padding: $el-size;
+    @include outline-def;
 }
 
 .box2 {
@@ -15,6 +13,14 @@
     border-radius: $el-rad;
     padding: $el-pad;
     border: $bd-def;
+}
+
+.cover {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .f-l {
